[project]
name = "AskDB"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
    "langchain-sandbox>=0.0.6",
    "langgraph>=0.6.6",
    "langgraph-prebuilt>=0.6.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "streamlit>=1.49.1",
]
